@@ -461,6 +461,9 @@ void SceneWrapper::connectToolSettings(docks::ToolSettings *toolSettings)
 		toolSettings, &docks::ToolSettings::subpixelModeChanged, m_view,
 		&CanvasView::setOutlineMode);
 	connect(
+		toolSettings, &docks::ToolSettings::offsetChanged, m_view,
+		&CanvasView::setOutlineOffset);
+	connect(
 		m_view, &CanvasView::colorDropped, toolSettings,
 		&docks::ToolSettings::setForegroundColor);
 	connect(
